--- a/app/src/main/res/layout/activity_recipe1.xml
+++ b/app/src/main/res/layout/activity_recipe1.xml
@@ -24,6 +24,8 @@
             android:id="@+id/toolbar_title"
             android:textSize="20sp"
             android:textColor="#ffffffff"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             />
     </androidx.appcompat.widget.Toolbar>
 
@@ -34,6 +36,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="10">
+
 
 
         <EditText
