--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -28,6 +28,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/j_edit_id"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -63,6 +64,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/j_edit_uname"
+            android:inputType="text"
             android:maxLength="10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -79,6 +81,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/j_edit_tel"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
