--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_vertical"
-    android:id="@+id/linear">
+    android:gravity="center_vertical">
 
     <ImageView
         android:id="@+id/app_name"
@@ -15,8 +14,7 @@
         android:layout_marginTop="40dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/ic_app_logo"
-        tools:srcCompat="@drawable/ic_app_logo"
-     />
+        tools:srcCompat="@drawable/ic_app_logo" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -25,8 +23,7 @@
         android:layout_marginTop="30dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/ic_app_icon"
-        tools:srcCompat="@drawable/ic_app_icon"
-        />
+        tools:srcCompat="@drawable/ic_app_icon" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
